--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
-@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-image: linear-gradient(90deg, #75dfff, #7158e2);
-  font-family: 'Muli', sans-serif;
+  background-image: linear-gradient(90deg, #7d5fff, #7158e2);
+  font-family: 'Roboto', sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
   overflow: hidden;
-  margin: o;
+  margin: 0;
 }
 
 .search {
@@ -20,7 +20,7 @@ body {
   height: 50px;
 }
 
-.input {
+.search .input {
   background-color: #fff;
   border: 0;
   font-size: 18px;
@@ -36,7 +36,7 @@ body {
   cursor: pointer;
   font-size: 24px;
   position: absolute;
-  top: o;
+  top: 0;
   left: 0;
   height: 50px;
   width: 50px;
@@ -54,9 +54,4 @@ body {
 
 .search.active .btn {
   transform: translateX(198px);
-}
-
-.btn img {
-  height: 12px;
-  width: 12px;
 }
